resources/archived/08-mymodel-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: seldon-core
    default: "true"
    model: "true"
    seldon-app-svc: mymodel-mygroup
    seldon-deployment-id: mymodel
  name: mymodel-mygroup
  namespace: ml-mon
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: mymodel-mygroup
    weight: 100
  wildcardPolicy: None
